--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -156,6 +156,7 @@
 <div class="work-section">
 <h2>КАК МЫ РАБОТАЕМ? </h2>
     <div class="rights-container">
+        <p>Цели, права и обязанности, ответственность сторон, конфиденциальность</p>
         <button class="toggle-rights-btn">Ознакомиться</button>
 
         <div class="rights-content">
@@ -196,17 +197,17 @@
             </ol>
 
             <h3>ППРАВА И ОБЯЗАННОСТИ ПСИХОЛОГА</h3>
-            <ul>
+            <ol>
                 <li>Психолог имеет право на неприкосновенность и уважение частной жизни.</li>
                 <li>Психолог имеет право ожидать и требовать справедливой компенсации за свою работу.</li>
                 <li>Психолог имеет право запрашивать и получать релевантную (достоверную) информацию от клиента, о тех аспектах жизни, которые его беспокоят.</li>
                 <li>Психолог имеет право получать релевантную информацию с разрешения клиента из других соответствующих источников (родственников, врачей и т.д.). </li>
                 <li>Если запрос клиента относится к деятельности других специалистов, то психолог обязуется рекомендовать ему другого специалиста, квалификация и специализация которого соответствует необходимой клиенту помощи. </li>
                 <li>Психолог имеет право звонить клиенту по организационным вопросам.</li>
-            </ul>
+            </ol>
 
             <h3>Психолог несет ответственность перед клиентом за:</h3>
-            <ul>
+            <ol>
                 <li>Свой профессиональный уровень;</li>
                 <li>Соблюдение основных правил и принципов консультирования; </li>
                 <li>Предоставление психологической помощи в атмосфере уважения;</li>
@@ -215,28 +216,28 @@
                 <li>Анализ происходящего в процессе сессии;</li>
                 <li>Соблюдение временных рамок сессии;</li>
                 <li>соблюдение графика работы и заранее спланированную отмену или перенос сессии, только в случае объективной необходимости.</li>
-            </ul>
+            </ol>
 
             <h3>Психолог не несет ответственности перед клиентом за:</h3>
-            <ul>
+            <ol>
                 <li>То, каким образом клиент будет распоряжаться полученной информацией;</li>
                 <li>Те решения, которые принимает клиент;</li>
                 <li>Те чувства и эмоции, которые испытывает клиент (психолог лишь предлагает их осознавать и анализировать);</li>
                 <li>Его физическое состояние (психолог лишь предлагает осознавать и анализировать соматические реакции клиента).</li>
-            </ul>
+            </ol>
 
             <h3>ПРАВА И ОБЯЗАННОСТИ КЛИЕНТА</h3>
-            <ul>
-                <li>Несовершеннолетние клиенты в возрасте с 14 лет имеют право посещать психолога самостоятельно без включения в психологическую работу родителей (законных представителей), при условии самостоятельной оплаты работы психолога.</li>
-                <li>- При условии, что работу психолога с несовершеннолетним (в возрасте до 18 лет) оплачивают родители (законные представители), то они являются полноправными участниками психологического процесса, и обязаны также посещать психолога. В этом случае психолог соблюдает все правила конфиденциальности, если несовершеннолетний не желает, чтобы родители (законные представители) знали что-либо о его психологическом процессе. Исключения составляют случаи, угрожающие жизни несовершеннолетнего.</li>
-                <li>Если клиент получает консультации у других психологов или специалистов иного профиля (психиатр, невролог и пр.), клиент обязан информировать об этом психолога.</li>
-                <li>Клиент имеет право прервать работу с психологом на любом её этапе, при этом ответственность за последствия и последующее психологическое состояние клиента ложится на самого клиента.</li>
-                <li>Если клиент решает прекратить психологическую работу по собственной инициативе, то он обязуется уведомить об этом психолога лично, на одной из сессий.</li>
+            <ol>
+                <li>Несовершеннолетние клиенты в возрасте с 14 лет имеют право посещать психолога самостоятельно без включения в психологическую работу родителей (законных представителей), при условии самостоятельной оплаты работы психолога;</li>
+                <li>- При условии, что работу психолога с несовершеннолетним (в возрасте до 18 лет) оплачивают родители (законные представители), то они являются полноправными участниками психологического процесса, и обязаны также посещать психолога. В этом случае психолог соблюдает все правила конфиденциальности, если несовершеннолетний не желает, чтобы родители (законные представители) знали что-либо о его психологическом процессе. Исключения составляют случаи, угрожающие жизни несовершеннолетнего;</li>
+                <li>Если клиент получает консультации у других психологов или специалистов иного профиля (психиатр, невролог и пр.), клиент обязан информировать об этом психолога;</li>
+                <li>Клиент имеет право прервать работу с психологом на любом её этапе, при этом ответственность за последствия и последующее психологическое состояние клиента ложится на самого клиента;</li>
+                <li>Если клиент решает прекратить психологическую работу по собственной инициативе, то он обязуется уведомить об этом психолога лично, на одной из сессий;</li>
                 <li>Клиент сообщает психологу о планируемом отпуске за две сессии вперёд.</li>
-            </ul>
+            </ol>
 
             <h3>Клиент несет ответственность перед самим собой за:</h3>
-            <ul>
+            <ol>
                 <li>Конструктивное использование (или неиспользование) времени сессии;</li>
                 <li>Готовность (или неготовность) рисковать и открываться перед психологом; </li>
                 <li>Чувства и эмоции, которые он переживает в процессе сессии и после неё; </li>
@@ -244,10 +245,10 @@
                 <li>Выполнение (или невыполнение) рекомендаций психолога;</li>
                 <li>Применение (или неприменение) в жизни знаний и умений, полученных в процессе консультирования, а значит, за достижение (или не достижение) поставленных целей;</li>
                 <li>Использование своего энергетического, психического и интеллектуального потенциала для решения обозначенных трудностей в процессе психологической работы (на сессиях и между ними).</li>
-            </ul>
+            </ol>
 
             <h3>Клиент несет ответственность перед психологом за:</h3>
-            <ul>
+            <ol>
                 <li>Своевременную и справедливую компенсацию работы психолога;</li>
                 <li>Достоверность информации, предоставляемой психологу;</li>
                 <li>Не нанесение физического ущерба себе, психологу и имуществу (кроме специальных предметов, которые могут использоваться в упражнениях) во время сессий и между ними. В случае намеренного или ненамеренного повреждения помещения или обстановки, клиент обязуется возместить стоимость причинённого ущерба;</li>
@@ -256,23 +257,41 @@
                 <li>Информирование психолога об изменениях в своём физическом и психологическом самочувствии;</li>
                 <li>Соблюдение временных рамок сессии;</li>
                 <li>Соблюдение графика работы и заранее спланированную отмену или перенос сессии, только в случае объективной необходимости.</li>
-            </ul>
+            </ol>
 
             <h3>ПРОЧЕЕ</h3>
             <ol>
-                <li>Моя помощь строится на специальном воздействии словом и психологической работой на сессии. Никаких лекарственных препаратов я не выписываю.</li>
-                <li>Достоверность информации, предоставляемой психологу;</li>
-                <li>Не нанесение физического ущерба себе, психологу и имуществу (кроме специальных предметов, которые могут использоваться в упражнениях) во время сессий и между ними. В случае намеренного или ненамеренного повреждения помещения или обстановки, клиент обязуется возместить стоимость причинённого ущерба;</li>
-                <li>Получение психологической помощи в здравом уме и твёрдой памяти: не принимать алкоголь во время сессии, не покидать её ранее установленного времени, а также не приходить на сессию под влиянием алкоголя, наркотических веществ или лекарственных препаратов, не назначаемых врачом; информирование психолога о приёме лекарств, назначенных врачом, об изменениях дозы принимаемых лекарств и об отказе от принимаемых лекарств;</li>
-                <li>Информирование психолога об изменениях в следующих аспектах своей жизни: работе, образовании, отношениях с родителями, родственниками, близкими друзьями, мужем (женой), сексуальными партнёрами;</li>
-                <li>Информирование психолога об изменениях в своём физическом и психологическом самочувствии;</li>
-                <li>Соблюдение временных рамок сессии;</li>
-                <li>Соблюдение графика работы и заранее спланированную отмену или перенос сессии, только в случае объективной необходимости.</li>
+                <li>Моя помощь строится на специальном воздействии словом и психологической работой на сессии. Никаких лекарственных препаратов я не выписываю.
+                    При этом я могу:
+                    <ul>
+                        <li>Порекомендовать Вам обратиться к врачу для назначения лечения. Это связано с тем, что многие психологические трудности имеют подкрепление со стороны организма. Если не помочь организму посредствам приема лекарств, психотерапия может оказаться не настолько эффективной. Пример: депрессия. В некоторых случаях депрессии, справиться только усилиями психотерапии не получится, или результат отложится. Тогда я порекомендую Вам обратиться к коллеге для назначения медикаментозного лечения. Это ускорит процесс.</li>
+                    </ul>
+                </li>
+                <li>Я могу использовать описание Вашего случая в научных статьях в соответствующей профессиональной литературе, без указания Вашего имени.</li>
+                <li>Если Вам потребуется экстренная психологическая помощь, Вы можете мне позвонить по телефону, указанному для связи. Экстренная психологическая поддержка по телефону имеет длительность до 30 минут и оплачивается в размере 50% от стоимости обычной консультации.
+                    В случае необходимости экстренно поговорить со мной, Вы:
+                    <ul>
+                        <li>Пишите мне смс о необходимости разговора;</li>
+                        <li>Дожидаетесь ответа перед звонком мне. Учитывая, что наш разговор будет не запланированным, я могу быть занята;</li>
+                        <li>Оплачиваете стоимость экстренной консультации на банковскую карту;</li>
+                        <li>После этого мы с Вами созваниваемся.</li>
+                    </ul>
+                </li>
+            </ol>
+
+            <h3>КОНФИДЕНЦИАЛЬНОСТЬ</h3>
+            <ol>
+                <li>Все, что будет происходить и оговариваться на сессиях остается строго конфиденциальным.</li>
+                <li>Исключения:</li>
+                    <ul>
+                        <li>Случаи, если Вы можете нанести вред себе или другим людям;</li>
+                        <li>В случае обсуждения Вашего случая с коллегами.</li>
+                    </ul>
+                <li>Ваши персональные данные не раскрываются. Описывается только сам случай без указания имен.</li>
             </ol>
         </div>
     </div>
 </div>
-
 
 <div class="contact-info">
     <h2>Мои контакты</h2>
@@ -283,7 +302,7 @@
 </div>
 
  <div class="social-links">
-     <h2>Так же со смной можно связаться через социальные сети</h2>
+     <h2>Так же со мной можно связаться через социальные сети</h2>
      <div class="social-icons">
          <a href="https://t.me/+375296236583" target="_blank">
              <img src="{% static 'test_app1/images/telegram-ico.png' %}" alt="Telegram">
@@ -298,7 +317,6 @@
  </div>
 
 <script src="{% static 'js/animations.js' %}"></script>
-<!-- <script src="https://api-maps.yandex.ru/2.1/?apikey=0a049687-d13b-41c1-b03e-866902898911&lang=ru_RU" type="text/javascript"></script> -->
 <script src="{% static 'js/icon_customImage.js' %}"></script>
 <script src="{% static 'js/slider.js' %}"></script>
 <script src="{% static 'js/test-script.js' %}"></script>
