--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -22,6 +22,7 @@
         <div class="description">
             <h1><b>Обо мне</b></h1>
             <p>Меня зовут Карина и я практикующий психолог с опытом работы более 5 лет.</p>
+            <p>Помимо индивидуальной и парной терапии, провожу групповые встречи по личностному росту</p>
         </div>
     </div>
 
@@ -285,9 +286,8 @@
                 <li>Исключения:</li>
                     <ul>
                         <li>Случаи, если Вы можете нанести вред себе или другим людям;</li>
-                        <li>В случае обсуждения Вашего случая с коллегами.</li>
+                        <li>В случае обсуждения Вашего случая с коллегами, Ваши персональные данные не раскрываются. Описывается только сам случай без указания имен.</li>
                     </ul>
-                <li>Ваши персональные данные не раскрываются. Описывается только сам случай без указания имен.</li>
             </ol>
         </div>
     </div>
